# controllers/healthy/inspect.go
@@ -46,6 +46,7 @@ func (c *InspectController) Post() {
 	teacher_id, _:= c.GetInt("teacher_id")
 	kindergarten_id, _:= c.GetInt("kindergarten_id")
 	date := c.GetString("date")
+	content := c.GetString("content")
 
 	valid := validation.Validation{}
 	valid.Required(class_name,"class_name").Message("班级名称不能为空")
@@ -74,6 +75,7 @@ func (c *InspectController) Post() {
 		KindergartenId:kindergarten_id,
 		ClassName:class_name,
 		Date:date,
+		Content:content,
 	}
 	if err := w.Save(); err == nil {
 		c.Data["json"] = JSONStruct{"success", 0, "", "记录成功"}
@@ -106,7 +108,7 @@ func (c *InspectController) GetAll() {
 	types, _:= c.GetInt("types")
 	perPage, _ := c.GetInt("per_page")
 	role, _:= c.GetInt("role")
-	date := c.GetString("time")
+	date := c.GetString("date")
 	bady_id, _:= c.GetInt("baby_id")
 	search := c.GetString("search")
 
@@ -119,6 +121,7 @@ func (c *InspectController) GetAll() {
 		c.ServeJSON()
 		c.StopRun()
 	}
+	fmt.Println(date)
 	if works, err := f.GetAll(page, perPage, kindergarten_id, class_id, types, role, bady_id, date,search ); err == nil {
 		c.Data["json"] = JSONStruct{"success", 0, works, "获取成功"}
 	} else {
@@ -225,6 +228,7 @@ func (c *InspectController) Put() {
 	drug_id, _:= c.GetInt("drug_id")
 	teacher_id, _:= c.GetInt("teacher_id")
 	kindergarten_id, _:= c.GetInt("kindergarten_id")
+	content := c.GetString("content")
 
 	valid := validation.Validation{}
 	valid.Required(class_name,"class_name").Message("班级名称不能为空")
@@ -257,6 +261,7 @@ func (c *InspectController) Put() {
 		TeacherId:teacher_id,
 		KindergartenId:kindergarten_id,
 		ClassName:class_name,
+		Content:content,
 	}
 	if err := w.SaveInspect(); err == nil {
 		c.Data["json"] = JSONStruct{"success", 0, "", "申请成功"}
@@ -378,12 +383,12 @@ func (c *InspectController) ProjectNew() {
 // @Success 0 {object} 			shanxi.SxWorks
 // @Failure 1001 		参数不能为空
 // @Failure 1005 		获取失败
-// @router /chart/ [get]
-func (c *InspectController) Chart() {
+// @router /weight/ [get]
+func (c *InspectController) Weight() {
 	var f *healthy.Inspect
 
 	kindergarten_id, _:= c.GetInt("kindergarten_id")
-	types, _:= c.GetInt("types")
+	date := c.GetString("date")
 
 	//验证参数是否为空
 	valid := validation.Validation{}
@@ -393,7 +398,70 @@ func (c *InspectController) Chart() {
 		c.ServeJSON()
 		c.StopRun()
 	}
-	if works, err :=f.Chart(kindergarten_id, types); err == nil {
+	if works, err :=f.Weights(kindergarten_id, date); err == nil {
+		c.Data["json"] = JSONStruct{"success", 0, works, "获取成功"}
+	} else {
+		c.Data["json"] = JSONStruct{"error", 1005, err, "获取失败"}
+	}
+
+	c.ServeJSON()
+
+}
+
+// GetAll ...
+// @Title GetAll
+// @Description 身高健康统计
+// @Param	kindergarten_id		query	int		true		"幼儿园ID"
+// @Param	types				query	string	true		"类型"
+// @Success 0 {object} 			shanxi.SxWorks
+// @Failure 1001 		参数不能为空
+// @Failure 1005 		获取失败
+// @router /height/ [get]
+func (c *InspectController) Height() {
+	var f *healthy.Inspect
+
+	kindergarten_id, _:= c.GetInt("kindergarten_id")
+	date := c.GetString("date")
+
+	//验证参数是否为空
+	valid := validation.Validation{}
+	valid.Required(kindergarten_id,"kindergarten_id").Message("幼儿园ID不能为空")
+	if valid.HasErrors(){
+		c.Data["json"] = JSONStruct{"error", 1001, struct {}{}, valid.Errors[0].Message}
+		c.ServeJSON()
+		c.StopRun()
+	}
+	if works, err :=f.Heights(kindergarten_id, date); err == nil {
+		c.Data["json"] = JSONStruct{"success", 0, works, "获取成功"}
+	} else {
+		c.Data["json"] = JSONStruct{"error", 1005, err, "获取失败"}
+	}
+
+	c.ServeJSON()
+
+}
+
+// GetAll ...
+// @Title GetAll
+// @Description 全国统计
+// @Param	kindergarten_id		query	int		true		"幼儿园ID"
+// @Param	types				query	string	true		"类型"
+// @Success 0 {object} 			shanxi.SxWorks
+// @Failure 1001 		参数不能为空
+// @Failure 1005 		获取失败
+// @router /country/ [get]
+func (c *InspectController) Country() {
+	var f *healthy.Inspect
+	kindergarten_id, _:= c.GetInt("kindergarten_id")
+
+	valid := validation.Validation{}
+	valid.Required(kindergarten_id,"kindergarten_id").Message("幼儿园ID不能为空")
+	if valid.HasErrors(){
+		c.Data["json"] = JSONStruct{"error", 1001, struct {}{}, valid.Errors[0].Message}
+		c.ServeJSON()
+		c.StopRun()
+	}
+	if works, err :=f.Country(kindergarten_id); err == nil {
 		c.Data["json"] = JSONStruct{"success", 0, works, "获取成功"}
 	} else {
 		c.Data["json"] = JSONStruct{"error", 1005, err, "获取失败"}
